<resources>
    <string name="app_name">Inventory App</string>
    <string name="button_caption">Insert dummy product</string>
    <string name="table_header">Number of rows in store database table:</string>
    <string name="action_insert_random">Insert random product</string>
    <string name="action_delete_all_entries">Delete all products</string>
    <string name="quantity_available">%1$d available</string>
    <string name="price_with_dollar">$%1$d</string>
    <string name="content_button_plus">Add one to current number of this item</string>
    <string name="content_button_minus">Extract one from current quantity of this item.</string>
    <string name="call_button_caption">call</string>
    <string name="delete_button_caption">delete entry</string>
    <string name="product_name_label">Product</string>
    <string name="price_label">Price</string>
    <string name="quantity_label">Quantity</string>
    <string name="supplier_name_label">Supplier</string>
    <string name="phone_number_label">Phone number</string>
    <string name="supplier_name_label_item_info">Supplier:&#160;</string>
    <string name="phone_number_label_item_info">Phone number:&#160;</string>
    <string name="toast_provide_phone">Please provide phone number by editing product details</string>
    <string name="toast_problem_insert_fake">Problem with inserting new fake product</string>
    <string name="toast_success_fake">Brand new fake product has been added. Wow!</string>
    <string name="delete_entry_accept">Delete</string>
    <string name="cancel_delete_dialog">Cancel</string>
    <string name="delete_successful">Successfully deleted</string>
    <string name="delete_not_ok">Cannot delete entry!</string>
    <string name="delete_dialog_message">Do you really want to delete this entry?</string>
    <string name="action_edit">Edit</string>
    <string name="sell_button_capture">sell</string>
    <string name="Item_activity_label">Product details</string>
    <string name="edit_label_case_edit">Edit product</string>
    <string name="edit_label_case_add">Add product</string>
    <string name="action_save">Save changes</string>
    <string name="user_correct_toast">Please correct your input</string>
    <string name="product_name_empty_error">Product name cannot be empty</string>
    <string name="enter_price_error">Please enter price</string>
    <string name="enter_price_error_less_zero">Price cannot be less or equal to 0</string>
    <string name="enter_quantity_error">Please enter quantity</string>
    <string name="name_error.edit_text">Please provide correct name</string>
    <string name="update_success">Successfully updated</string>
    <string name="update_failure">Problem with updating</string>
    <string name="insert_success">Successfully added!</string>
    <string name="insert_failure">Cannot add new entry. Maybe try again?</string>
    <string name="quantity_less_zero_error_toast">Сannot set a quantity less than zero</string>
    <string name="delete_all_dialog_message">Do you want to delete ALL entries?</string>
    <string name="delete_all_not_ok">There was error with deleting</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="save_nothing_changes_toast">Nothing changes</string>
    <string name="empty_view_title_text">We are out of stock!</string>
    <string name="empty_view_subtitle_text">Try to add new product or randomize some from toolbar menu!</string>
    <string name="button_image_choose_label">Choose an image</string>
    <string name="failed_image_loading">Failed to load image.</string>
    <string name="input_stream_error">Failed to close input stream.</string>
    <string name="enter_supplier_error">Please enter supplier name</string>
    <string name="enter_supplier_phone_error">Please enter phone</string>
</resources>
